--- a/package.json
+++ b/package.json
@@ -57,12 +57,10 @@
         "jest-junit": "5.2.0",
         "jest-preset-angular": "6.0.1",
         "jest-sonar-reporter": "2.0.0",
-        "jhipster-uml": "^2.0.3",
         "lint-staged": "8.1.0",
         "mini-css-extract-plugin": "0.4.5",
         "moment-locales-webpack-plugin": "1.0.7",
         "optimize-css-assets-webpack-plugin": "5.0.1",
-        "postcss-loader": "3.0.0",
         "prettier": "1.15.2",
         "reflect-metadata": "0.1.12",
         "rimraf": "2.6.2",
@@ -76,6 +74,8 @@
         "tslint-config-prettier": "1.16.0",
         "tslint-loader": "3.6.0",
         "typescript": "3.1.6",
+        "postcss-loader": "3.0.0",
+        "xml2js": "0.4.19",
         "webpack": "4.26.0",
         "webpack-cli": "3.1.2",
         "webpack-dev-server": "3.1.10",
@@ -83,8 +83,7 @@
         "webpack-notifier": "1.7.0",
         "webpack-visualizer-plugin": "0.1.11",
         "workbox-webpack-plugin": "3.6.3",
-        "write-file-webpack-plugin": "4.5.0",
-        "xml2js": "0.4.19"
+        "write-file-webpack-plugin": "4.5.0"
     },
     "engines": {
         "node": ">=8.9.0"
