Initial application generated by JHipster-5.7.1

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -14,7 +14,7 @@
         "enableHibernateCache": true,
         "websocket": false,
         "databaseType": "sql",
-        "devDatabaseType": "postgres",
+        "devDatabaseType": "postgresql",
         "prodDatabaseType": "postgresql",
         "searchEngine": false,
         "messageBroker": false,
