--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -14,8 +14,8 @@
         "enableHibernateCache": true,
         "websocket": false,
         "databaseType": "sql",
-        "devDatabaseType": "h2Disk",
-        "prodDatabaseType": "postgresql",
+        "devDatabaseType": "mysql",
+        "prodDatabaseType": "mysql",
         "searchEngine": false,
         "messageBroker": false,
         "serviceDiscoveryType": false,
