--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -5,11 +5,11 @@ services:
         environment:
             - _JAVA_OPTIONS=-Xmx512m -Xms256m
             - SPRING_PROFILES_ACTIVE=prod,swagger
-            - SPRING_DATASOURCE_URL=jdbc:postgresql://project-postgresql:5432/project
+            - SPRING_DATASOURCE_URL=jdbc:mysql://project-mysql:3306/project?useUnicode=true&characterEncoding=utf8&useSSL=false
             - JHIPSTER_SLEEP=10 # gives time for the database to boot before the application
         ports:
             - 8080:8080
-    project-postgresql:
+    project-mysql:
         extends:
-            file: postgresql.yml
-            service: project-postgresql
+            file: mysql.yml
+            service: project-mysql
